Working on a huge refactor